--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <label for="pitch">Pitch:</label>
 
     <input name="pitch" type="range" min="0" max="2" step="0.1">
-    <textarea name="text">Hello! I love JavaScript 👍</textarea>
+    <textarea name="text">Hello! Type in here anything that you want 👍</textarea>
     <button id="stop">Stop!</button>
     <button id="speak">Speak</button>
 
